# quotes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: stock_list.rs
src/: error.rs  lib.rs  main.rs  quote.rs  sina.rs  stock_list.rs  tencent.rs  utils.rs
tests/: test_quote.rs  test_stock_list.rs
