[package]
name = "quotes"
version = "0.1.2"
authors = ["zhaoyz <954241552@qq.com>"]
description = "Request tick、stock_list msgs"
repository = "https://github.com/YangzhenZhao/quotes"
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/quotes/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.8.0"
futures = "0.3.8"
surf = "2.1.0"
isahc = "0.9.14"
http-client = "6.2.0"
chrono = "0.4"
async-trait = "0.1.42"
calamine = "0.16.2"
url = "2.1.1"
http = "0.2.2"
serde = "1.0.118"
serde_json = "1.0.59"
