[package]
name = "quotes"
version = "0.1.2"
authors = ["zhaoyz <954241552@qq.com>"]
description = "Request tick、stock_list msgs"
repository = "https://github.com/YangzhenZhao/quotes"
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/quotes/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
futures = "0.3.13"
surf = "2.2.0"
isahc = "1.1.0"
http-client = "6.3.4"
chrono = "0.4.19"
async-trait = "0.1.48"
calamine = "0.18.0"
url = "2.2.1"
http = "0.2.3"
serde = "1.0.124"
serde_json = "1.0.64"
